# limas

./: .gitignore
asset/fonts/: command_for_embedding
examples/artnet_example/: CMakeLists.txt  Info.plist  artnet_example.code-workspace
examples/artnet_example/lib/libpcap/lib/: libpcap.1.10.4.dylib
examples/artnet_example/lib/libpcap/lib/pkgconfig/: libpcap.pc
examples/artnet_example/src/: App.h  ArtNetCapture.h  TrafficCapture.h  main.cpp
examples/artnet_receiver_example/: CMakeLists.txt  artnet_receiver_example.code-workspace
examples/assimp_example/: CMakeLists.txt  assimp_example.code-workspace
examples/bitmapfont_example/: CMakeLists.txt  bitmapfont_example.code-workspace
examples/cv_example/: CMakeLists.txt  Info.plist  cv_example.code-workspace
examples/cv_example/assets/python/: test.py
examples/cv_example/src/: App.h
examples/font_example/: CMakeLists.txt  font_example.code-workspace
examples/gltf_example/: CMakeLists.txt  gltf_example.code-workspace
examples/gltf_example/src/: App.h  main.cpp
examples/grid_example/: CMakeLists.txt  grid_example.code-workspace
examples/gui_example/: CMakeLists.txt  gui_example.code-workspace
examples/http_example/: CMakeLists.txt  http_example.code-workspace
examples/lfo_example/: CMakeLists.txt  lfo_example.code-workspace
examples/ndi_example/: CMakeLists.txt  ndi_example.code-workspace
examples/parameter_example/: CMakeLists.txt  parameter_example.code-workspace
examples/polyline_example/: CMakeLists.txt  polyline_example.code-workspace
examples/postprocessing_example/: CMakeLists.txt  postprocessing_example.code-workspace
examples/python_example/: CMakeLists.txt  python_example.code-workspace
examples/raymarching_example/: CMakeLists.txt  raymarching_example.code-workspace
examples/shader_example/: CMakeLists.txt  shader_example.code-workspace
examples/thread_example/: CMakeLists.txt  thread_example.code-workspace
examples/timer_test/: CMakeLists.txt  timer_test.code-workspace
examples/transformfeedback_example/: CMakeLists.txt  (+1 more)
examples/udp_example/: CMakeLists.txt  (+1 more)
resources/: icon.icns
scripts/: conf.example.ini  install.sh  limas.cmake  project_generator.command  project_generator.py  rsfw.cmake
scripts/templates/record_template/: CMakeLists.txt
scripts/templates/record_template/assets/shader/: default.frag
scripts/templates/record_template/src/: App.h  main.cpp
(+359 files in other folders)
